--- a/web/labs.html
+++ b/web/labs.html
@@ -57,13 +57,15 @@
                     but I ended up modifying it and using getters to access the private properties of my object. After I figured that out, the rest was easy.
                     This lab taught me the basics of Object Oriented JavaScript. 
                 </p>
-                <h3><a href="04_adv_js/index.html">Lab 4: Advanced JavaScript</a></h3>
+                <h3><a href="04_js_adv/index.html">Lab 4: Advanced JavaScript</a></h3>
                 <p>
                     This lab was a lot more difficult than previous labs. I ran into quite a few problems that I had to address.
                     In the myStyle.css file I had set my img tag to 100% width, so I had to go into the showList function and edit 
                     the delIcon to be much smaller. After figuring that out the delete functionality was simple enough. 
                     The big problem for me was reading the cookies. I created a new object list that had public properties so that 
                     I could store the cookie, but when I went to read the cookie setting the private properties to equal the public properties didn't seem to work. 
+                    I found out that the reason for this was that I was setting the private object list equal to the cookie object rather 
+                    than setting the public object list equal to the cookie. Everything seems to be working fine now. 
                 </p><!--
                 <h3>Lab 5: Database</h3>
                 <p>
