--- a/web/labs.html
+++ b/web/labs.html
@@ -65,12 +65,16 @@
                     The big problem for me was reading the cookies. I created a new object list that had public properties so that 
                     I could store the cookie, but when I went to read the cookie setting the private properties to equal the public properties didn't seem to work. 
                     I found out that the reason for this was that I was setting the private object list equal to the cookie object rather 
-                    than setting the public object list equal to the cookie. Everything seems to be working fine now. 
-                </p><!--
-                <h3>Lab 5: Database</h3>
-                <p>
-                    Fill in your blog  (see lab writeup for what to put here).
+                    than setting the public object list equal to the cookie. 
+                    This lab taught me how to delete objects from a list and about cookie persistence. 
                 </p>
+                <h3><a href="05_js_fw/index.html">JS Framework Mini Web Site</a></h3>  
+                <p>
+                    This week's lab was initially tricky to wrap my head around until I looked at the sample code and understood what 
+                    we were supposed to do. The instructions were pretty clear. I didn't have any trouble with the HTML snippet aspect of the lab. 
+                    The most difficult aspect of this lab was the part where we had to make a drop down bar without using jQuery. I couldn't get mine to 
+                    work with JavaScript, so I just ended up using jQuery anyways. 
+                </p><!--
                 <h3>-- TUTORIAL --</h3>
                 <p>
                     Fill in your blog  (see lab writeup for what to put here).
