--- a/web/labs.html
+++ b/web/labs.html
@@ -79,10 +79,35 @@
                 <p>
                     Fill in your blog  (see lab writeup for what to put here).
                 </p>
-                <h3>Lab 6: Web APIs and AJAX</h3>
+                -->                <h3>Lab 6: Databases - MySQL Workbench</h3>
                 <p>
-                    Fill in your blog  (see lab writeup for what to put here).
+                    This lab was a bit tedious because I had to manually enter 20+ records into my unique table. Other than that, it was pretty straightforward. 
+                    In this lab I created two tables: an account table and a champion table. I learned how to insert, update, and delete records in these tables 
+                    as well as the ability to search for specific records. I also learned how to use MySQL Workbench which is basically a GUI that makes MySQL more user friendly. 
                 </p>
+                <p>
+                    Click <a href="MalantonioDatabase.docx">here</a> to see my database work. 
+                </p>
+
+                <h3>Lab 7: Web API</h3>
+                <p>
+                    The main focus for this weeks lab was displaying data from a database onto the web. I made calls to my database in order to get the information I wanted in 
+                    gson format and then converted it to JSON format so that I could manipulate the data and display it in a table. The hardest part for me was doing the jQuery 
+                    version for inserting DOM elements. It took a little bit of googling to figure out the right functions to use, but overall this week's lab was OK. 
+                    I learned a lot about working with information from databases and how to make my own API. 
+
+
+                </p>
+                <p>
+                    <a href="07_webApi/webApi.jsp">Web API</a>
+                </p>
+                <p>
+                    <a href="07_webApi/testApiJs.html">JavaScript implementation</a>
+                </p>
+                <p>
+                    <a href="07_webApi/testApiJq.html">jQuery implementation</a>
+                </p>
+                <!--
 
                 <h3>Labs 7-9: AngularJS Triple Lab</h3>
                 <p>
